fixed-alignment-and-hover-issue

--- a/cartridges/app_custom_lety/cartridge/static/default/css/global.css
+++ b/cartridges/app_custom_lety/cartridge/static/default/css/global.css
@@ -4123,10 +4123,10 @@ textarea.form-control.is-invalid {
   }
 }
 
-.btn:hover {
+/* .btn:hover {
   color: #212529;
   text-decoration: none;
-}
+} */
 
 .btn.focus,
 .btn:focus {
@@ -19281,6 +19281,13 @@ div.availability {
   padding-top: 10px;
 }
 
+/* Mobile styles */
+@media screen and (min-width: 320px) and (max-width: 1200px) {
+  .msg-height {
+    height: 48px !important;
+    display: block;
+  }
+}
 .product-tile .image-container a .tile-image {
   object-fit: cover;
 }
@@ -19443,7 +19450,7 @@ a .moreless .less {
 .product-tile .tile-body .price {
   font-size: 20px !important;
   height: auto;
-  min-height: 70px;
+  min-height: 50px;
 }
 
 .product-tile .tile-body .truncate {
